post ajax com angular

--- a/djangular2/base/templates/_layouts/base.html
+++ b/djangular2/base/templates/_layouts/base.html
@@ -80,6 +80,7 @@
   {% compress js %}
   {% block js %}
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/ajax.js' %}"></script>
   {% endblock js %}
   {% endcompress %}
   <!-- end scripts -->
